force-app/main/default/objects/pse__Est_Vs_Actuals_Settings__c/fields/pse__Delete_Out_of_Range_Records_With_Actuals__c.field-meta.xml
<CustomField>
    <fullName>pse__Delete_Out_of_Range_Records_With_Actuals__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Delete Est vs Actuals records even if they have actuals set for records that are no longer within a modified schedule&apos;s date range. NOTE: Records without actuals will always be deleted.</description>
    <inlineHelpText>Delete Est vs Actuals records even if they have actuals set for records that are no longer within a modified schedule&apos;s date range. NOTE: Records without actuals will always be deleted.</inlineHelpText>
    <label>Delete Out of Range Records With Actuals</label>
    <type>Checkbox</type>
</CustomField>