force-app/main/default/objects/pse__Est_Vs_Actuals_Settings__c/fields/pse__Update_Project_Manager_Batch_Size__c.field-meta.xml
<CustomField>
    <fullName>pse__Update_Project_Manager_Batch_Size__c</fullName>
    <defaultValue>2000</defaultValue>
    <description>Defines the batch size used when updating the Project Manager field from Project. The default is 2000. Consult with FinancialForce Support before changing this setting.</description>
    <inlineHelpText>Defines the batch size used when updating the Project Manager field from Project. The default is 2000. Consult with FinancialForce Support before changing this setting.</inlineHelpText>
    <label>Update Project Manager Field Batch Size</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>