force-app/main/default/objects/pse__Est_Vs_Actuals_Settings__c/fields/pse__Update_Project_Manager_From_Project__c.field-meta.xml
<CustomField>
    <fullName>pse__Update_Project_Manager_From_Project__c</fullName>
    <defaultValue>true</defaultValue>
    <description>If checked, this setting causes updates to the Project Manager field to be reflected in all Est Vs Actuals records for that Project.</description>
    <inlineHelpText>If checked, this setting causes updates to the Project Manager field to be reflected in all Est Vs Actuals records for that Project.</inlineHelpText>
    <label>Update Project Manager From Project</label>
    <type>Checkbox</type>
</CustomField>