force-app/main/default/objects/pse__Est_Vs_Actuals_Settings__c/fields/pse__Use_Week_Time_Periods_If_In_Range__c.field-meta.xml
<CustomField>
    <fullName>pse__Use_Week_Time_Periods_If_In_Range__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When true, weekly estimates versus actuals are not automatically generated if you have custom time periods of a week type defined that overlap with an assignment or a held resource request. The default value is false.</description>
    <inlineHelpText>When true, weekly Estimates vs Actuals are not automatically-generated if you have custom Time Periods of a Week type defined that overlap with a given assignment. The default is false.</inlineHelpText>
    <label>Disable Automatic Weekly Time Periods</label>
    <type>Checkbox</type>
</CustomField>